fix z-index in feedback page

--- a/KUIZ/static/KUIZ/css/navbar.css
+++ b/KUIZ/static/KUIZ/css/navbar.css
@@ -59,6 +59,7 @@
 .profile {
     margin-right: 100px;
     cursor: pointer;
+    z-index: 1;
 }
 
 .options {
